src/objects/SOX_Risk__c.object
<CustomObject>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Level_1__c</fullName>
        <label>Level 1</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_2__c</fullName>
        <label>Level 2</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_3__c</fullName>
        <label>Level 3</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Numeric_Total__c</fullName>
        <formula>IF(ISPICKVAL(Level_1__c ,&apos;Low&apos;),1,IF(ISPICKVAL(Level_1__c ,&apos;Medium&apos;),2,IF(ISPICKVAL(Level_1__c ,&apos;High&apos;),3,0))) +
IF(ISPICKVAL(Level_2__c ,&apos;Low&apos;),1,IF(ISPICKVAL(Level_2__c ,&apos;Medium&apos;),2,IF(ISPICKVAL(Level_2__c ,&apos;High&apos;),3,0))) +
IF(ISPICKVAL(Level_3__c ,&apos;Low&apos;),1,IF(ISPICKVAL(Level_3__c ,&apos;Medium&apos;),2,IF(ISPICKVAL(Level_3__c ,&apos;High&apos;),3,0))) +
IF(ISPICKVAL(Level_4__c ,&apos;Low&apos;),1,IF(ISPICKVAL(Level_4__c ,&apos;Medium&apos;),2,IF(ISPICKVAL(Level_4__c ,&apos;High&apos;),3,0))) +
IF(ISPICKVAL(Level_5__c ,&apos;Low&apos;),1,IF(ISPICKVAL(Level_5__c ,&apos;Medium&apos;),2,IF(ISPICKVAL(Level_5__c ,&apos;High&apos;),3,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numeric Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Risk_Score__c</fullName>
        <description>value 0 to 5 based on Numeric total. Populating through a workflow</description>
        <label>Overall Risk Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>ASSETS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIABILITIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STOCKHOLDERS EQUITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INCOME STATEMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISCLOSURES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SOX Risk</label>
    <nameField>
        <label>SOX Risks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SOX Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>